--- a/src/main/java/com/person/cn/demotestone/designmodel/bridge/description
+++ b/src/main/java/com/person/cn/demotestone/designmodel/bridge/description
@@ -1,4 +1,4 @@
-桥接模式：将抽象部分与实现部分分离，时它们可以独立的变化，是一种对象机构模型，又称为柄体模式
+桥接模式：将抽象部分与实现部分分离，它们可以独立的变化，是一种对象机构模型，又称为柄体模式
 或者接口模式。
 具体场景：
 ①用大、中、小三种型号的毛笔，每种型号绘画12种不同的颜色。
@@ -8,3 +8,5 @@
    2、定义具体的操作系统，实现各自系统的解析方法
    3、定义一个抽象图片类，并引用抽象图片解析对象，以及解析不同格式文件的抽象方法
    4、定义具体的图像格式实现类
+
+ 使用场景：不希望使用继承或者因为多层次继承导致系统类的个数急剧增加的系统，桥接模式最适合
